Reindent backend code to 3 spaces and optimize imports