@@ -31,112 +31,112 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 @ActiveProfiles("dev")
 public class TransactionServiceTest {
 
-    @Autowired
-    private TransactionService transactionService;
+   @Autowired
+   private TransactionService transactionService;
 
-    @MockBean
-    private TransactionRepository transactionRepository;
+   @MockBean
+   private TransactionRepository transactionRepository;
 
-    private List<TransactionEntity> transactionEntityList;
+   private List<TransactionEntity> transactionEntityList;
 
-    @BeforeEach
-    void setUp() {
-        TransactionEntity transactionEntity1 = TransactionEntity.builder()
-                .idTransaction(564326L)
-                .idTransferAccount(312421)
-                .receiverName("Maria")
-                .transactionAmount(new BigDecimal("87523.45"))
-                .transactionTimestamp(LocalDateTime.of(2022, Month.OCTOBER, 12, 13, 12, 0))
-                .build();
+   @BeforeEach
+   void setUp() {
+      TransactionEntity transactionEntity1 = TransactionEntity.builder()
+              .idTransaction(564326L)
+              .idTransferAccount(312421)
+              .receiverName("Maria")
+              .transactionAmount(new BigDecimal("87523.45"))
+              .transactionTimestamp(LocalDateTime.of(2022, Month.OCTOBER, 12, 13, 12, 0))
+              .build();
 
-        TransactionEntity transactionEntity2 = TransactionEntity.builder()
-                .idTransaction(87686L)
-                .idTransferAccount(312421)
-                .receiverName("Maria")
-                .transactionAmount(new BigDecimal("7657.75"))
-                .transactionTimestamp(LocalDateTime.of(2022, Month.JANUARY, 20, 20, 12, 0))
-                .build();
+      TransactionEntity transactionEntity2 = TransactionEntity.builder()
+              .idTransaction(87686L)
+              .idTransferAccount(312421)
+              .receiverName("Maria")
+              .transactionAmount(new BigDecimal("7657.75"))
+              .transactionTimestamp(LocalDateTime.of(2022, Month.JANUARY, 20, 20, 12, 0))
+              .build();
 
-        TransactionEntity transactionEntity3 = TransactionEntity.builder()
-                .idTransaction(6546L)
-                .idTransferAccount(312421)
-                .receiverName("Maria")
-                .transactionAmount(new BigDecimal("6546734.76"))
-                .transactionType(TransactionType.ONLINE_PAYMENT)
-                .transactionTimestamp(LocalDateTime.of(2022, Month.DECEMBER, 11, 13, 12, 0))
-                .build();
+      TransactionEntity transactionEntity3 = TransactionEntity.builder()
+              .idTransaction(6546L)
+              .idTransferAccount(312421)
+              .receiverName("Maria")
+              .transactionAmount(new BigDecimal("6546734.76"))
+              .transactionType(TransactionType.ONLINE_PAYMENT)
+              .transactionTimestamp(LocalDateTime.of(2022, Month.DECEMBER, 11, 13, 12, 0))
+              .build();
 
-        TransactionEntity transactionEntity4 = TransactionEntity.builder()
-                .idTransaction(67582L)
-                .idTransferAccount(312421)
-                .receiverName("Maria")
-                .transactionAmount(new BigDecimal("5464.76"))
-                .transactionType(TransactionType.DEPOSIT)
-                .transactionTimestamp(LocalDateTime.of(2022, Month.FEBRUARY, 11, 13, 12, 0))
-                .build();
+      TransactionEntity transactionEntity4 = TransactionEntity.builder()
+              .idTransaction(67582L)
+              .idTransferAccount(312421)
+              .receiverName("Maria")
+              .transactionAmount(new BigDecimal("5464.76"))
+              .transactionType(TransactionType.DEPOSIT)
+              .transactionTimestamp(LocalDateTime.of(2022, Month.FEBRUARY, 11, 13, 12, 0))
+              .build();
 
-        transactionEntityList = Arrays.asList(transactionEntity1, transactionEntity2, transactionEntity3, transactionEntity4);
-    }
+      transactionEntityList = Arrays.asList(transactionEntity1, transactionEntity2, transactionEntity3, transactionEntity4);
+   }
 
-    @Test
-    @DisplayName("Should return one transactionEntity with the specific id using the repository")
-    void getTransactionById() {
-        Mockito.when(transactionRepository.getTransactionById(6546L))
-                .thenReturn(Optional.of(transactionEntityList.get(2)));
+   @Test
+   @DisplayName("Should return one transactionEntity with the specific id using the repository")
+   void getTransactionById() {
+      Mockito.when(transactionRepository.getTransactionById(6546L))
+              .thenReturn(Optional.of(transactionEntityList.get(2)));
 
-        TransactionEntity transactionEntity = transactionService.getTransactionById(6546L).get();
+      TransactionEntity transactionEntity = transactionService.getTransactionById(6546L).get();
 
-        assertEquals(6546L, transactionEntity.getIdTransaction());
-    }
+      assertEquals(6546L, transactionEntity.getIdTransaction());
+   }
 
-    @Test
-    @DisplayName("Should return all transactionEntity with the specific idAccount using the repository")
-    void getByIdAccount() {
-        Mockito.when(transactionRepository.getByIdAccount(343, 1))
-                .thenReturn(Optional.of(new PageImpl<>(
-                        List.of(transactionEntityList.get(0), transactionEntityList.get(2), transactionEntityList.get(3)))));
+   @Test
+   @DisplayName("Should return all transactionEntity with the specific idAccount using the repository")
+   void getByIdAccount() {
+      Mockito.when(transactionRepository.getByIdAccount(343, 1))
+              .thenReturn(Optional.of(new PageImpl<>(
+                      List.of(transactionEntityList.get(0), transactionEntityList.get(2), transactionEntityList.get(3)))));
 
-        Page<TransactionEntity> transactionList = transactionService.getByIdAccount(343, 1).get();
+      Page<TransactionEntity> transactionList = transactionService.getByIdAccount(343, 1).get();
 
-        assertAll(
-                () -> assertThat(transactionList.getSize()).isEqualTo(3),
-                () -> assertEquals(List.of(564326L, 6546L, 67582L), transactionList.stream().map(TransactionEntity::getIdTransaction).toList())
-        );
-    }
+      assertAll(
+              () -> assertThat(transactionList.getSize()).isEqualTo(3),
+              () -> assertEquals(List.of(564326L, 6546L, 67582L), transactionList.stream().map(TransactionEntity::getIdTransaction).toList())
+      );
+   }
 
-    @Test
-    @DisplayName("Should return all transactionEntity with the specific idAccount using the repository")
-    void getByIdAccountAndName() {
-        Mockito.when(transactionRepository.getByIdAccountAndName(343, "ma", 1))
-                .thenReturn(Optional.of(new PageImpl<>(
-                        List.of(transactionEntityList.get(1), transactionEntityList.get(2)))));
+   @Test
+   @DisplayName("Should return all transactionEntity with the specific idAccount using the repository")
+   void getByIdAccountAndName() {
+      Mockito.when(transactionRepository.getByIdAccountAndName(343, "ma", 1))
+              .thenReturn(Optional.of(new PageImpl<>(
+                      List.of(transactionEntityList.get(1), transactionEntityList.get(2)))));
 
-        Page<TransactionEntity> transactionList = transactionService.getByIdAccountAndName(343, "ma", 1).get();
+      Page<TransactionEntity> transactionList = transactionService.getByIdAccountAndName(343, "ma", 1).get();
 
-        assertAll(
-                () -> assertThat(transactionList.getSize()).isEqualTo(2),
-                () -> assertEquals(List.of(87686L, 6546L), transactionList.stream().map(TransactionEntity::getIdTransaction).toList()),
-                () -> assertEquals(List.of("Maria", "Maria"), transactionList.stream().map(TransactionEntity::getReceiverName).toList())
-        );
-    }
+      assertAll(
+              () -> assertThat(transactionList.getSize()).isEqualTo(2),
+              () -> assertEquals(List.of(87686L, 6546L), transactionList.stream().map(TransactionEntity::getIdTransaction).toList()),
+              () -> assertEquals(List.of("Maria", "Maria"), transactionList.stream().map(TransactionEntity::getReceiverName).toList())
+      );
+   }
 
 
-    @Test
-    @DisplayName("Should return all transactionEntity with the specific idAccount and year using the repository")
-    void getByIdAccountAndDateAndName() {
-        Mockito.when(transactionRepository.getByIdAccountAndDateAndName(1, 2021, Optional.of(Month.JANUARY), "ma", 0))
-                .thenReturn(Optional.of(new PageImpl<>(
-                        Collections.singletonList(transactionEntityList.get(1)))));
+   @Test
+   @DisplayName("Should return all transactionEntity with the specific idAccount and year using the repository")
+   void getByIdAccountAndDateAndName() {
+      Mockito.when(transactionRepository.getByIdAccountAndDateAndName(1, 2021, Optional.of(Month.JANUARY), "ma", 0))
+              .thenReturn(Optional.of(new PageImpl<>(
+                      Collections.singletonList(transactionEntityList.get(1)))));
 
-        Page<TransactionEntity> transactionList = transactionService.getByIdAccountAndDateAndName(1, 2021, Optional.of(Month.JANUARY), "ma", 0).get();
+      Page<TransactionEntity> transactionList = transactionService.getByIdAccountAndDateAndName(1, 2021, Optional.of(Month.JANUARY), "ma", 0).get();
 
-        assertAll(
-                () -> assertThat(transactionList.getSize()).isEqualTo(1),
-                () -> assertEquals(List.of(87686L), transactionList.stream().map(TransactionEntity::getIdTransaction).toList()),
-                () -> assertEquals(List.of(312421), transactionList.stream().map(TransactionEntity::getIdTransferAccount).toList()),
-                () -> assertEquals(List.of("Maria"), transactionList.stream().map(TransactionEntity::getReceiverName).toList()),
-                () -> assertEquals(List.of("7657.75"), transactionList.stream().map(transaction -> transaction.getTransactionAmount().toString()).toList()),
-                () -> assertEquals(Collections.singletonList(transactionEntityList.get(1).getTransactionTimestamp()), transactionList.stream().map(TransactionEntity::getTransactionTimestamp).toList())
-        );
-    }
+      assertAll(
+              () -> assertThat(transactionList.getSize()).isEqualTo(1),
+              () -> assertEquals(List.of(87686L), transactionList.stream().map(TransactionEntity::getIdTransaction).toList()),
+              () -> assertEquals(List.of(312421), transactionList.stream().map(TransactionEntity::getIdTransferAccount).toList()),
+              () -> assertEquals(List.of("Maria"), transactionList.stream().map(TransactionEntity::getReceiverName).toList()),
+              () -> assertEquals(List.of("7657.75"), transactionList.stream().map(transaction -> transaction.getTransactionAmount().toString()).toList()),
+              () -> assertEquals(Collections.singletonList(transactionEntityList.get(1).getTransactionTimestamp()), transactionList.stream().map(TransactionEntity::getTransactionTimestamp).toList())
+      );
+   }
 }
